--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,12 @@
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["."]  # list of folders that contain the packages (["."] by default)
+include = ["src*", "resources*"]  # package names should match these glob patterns (["*"] by default)
+exclude = []  # exclude packages matching these glob patterns (empty by default)
+namespaces = false
+
 [project]
 name = "wfreq"
 version = "0.1.0"
@@ -23,4 +29,4 @@ readme = "README.md"
 license = "MIT"
 
 [project.scripts]
-wfreq = "wfreq.cli:main"
+wfreq = "src.cli:main"
