--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,20 @@ requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["."]  # list of folders that contain the packages (["."] by default)
-include = ["src*", "resources*"]  # package names should match these glob patterns (["*"] by default)
+where = ["src"]  # list of folders that contain the packages (["."] by default)
+include = ["*"]  # package names should match these glob patterns (["*"] by default)
 exclude = []  # exclude packages matching these glob patterns (empty by default)
 namespaces = false
 
+[tool.setuptools.package-dir]
+"" = "src"  # Tell setuptools that packages are in src/
+
+[tool.setuptools.package-data]
+"*" = ["../resources/**/*"]
+
 [project]
 name = "wfreq"
-version = "0.1.0"
+version = "0.1.2"
 description = "CLI tool for frequency analyzing"
 authors = [{name = "Vit Burk", email = "burkasovvitalij@gmail.com"}]
 dependencies = [
@@ -29,4 +35,4 @@ readme = "README.md"
 license = "MIT"
 
 [project.scripts]
-wfreq = "wfreq.cli:main"
+wfreq = "cli:main"
